31 August 2022: Wouter
	- Fix to avoid process wide fcntl calls mixed with nonblocking
	  operations after a blocked write.
	- Patch from Vadim Fedorenko that adds MSG_DONTWAIT to receive
	  operations, so that instruction reordering does not cause mistakenly
	  blocking socket operations.
	- Fix to wait for blocked write on UDP sockets, with a timeout if it
	  takes too long the packet is dropped.
	- Fix for wait for udp send to stop when packet is successfully sent.

22 August 2022: Wouter
	- Fix #741: systemd socket activation fails on IPv6.

12 August 2022: Wouter
	- Fix to log accept error ENFILE and EMFILE errno, but slowly, once
	  per 10 seconds. Also log accept failures when no slow down is used.

5 August 2022: Wouter
	- Fix #734 [FR] enable unbound-checkconf to detect more (basic)
	  errors.

4 August 2022: Wouter
	- Fix ratelimit inconsistency, for ip-ratelimits the value is the
	  amount allowed, like for ratelimits.

2 August 2022: Wouter
	- Fix edns subnet so that scope 0 answers only match sourcemask 0
	  queries for answers from cache if from a query with sourcemask 0.
	- Fix unittest for edns subnet change.
	- Merge #730 from luisdallos: Fix startup failure on Windows 8.1 due
	  to unsupported IPV6_USER_MTU socket option being set.

1 August 2022: Wouter
	- Fix the novel ghost domain issues CVE-2022-30698 and CVE-2022-30699.
	- Tests for ghost domain fixes.
	- Tag for 1.16.2 release. The code repo continues with 1.16.3.
	- Fix #728: alloc_reg_obtain() core dump. Stop double
	  alloc_reg_release when serviced_create fails.

19 July 2022: George
	- Update documentation for 'outbound-msg-retry:'.

19 July 2022: Wouter
	- Merge #718: Introduce infra-cache-max-rtt option to config max
	  retransmit timeout.

15 July 2022: Wouter
	- Merge PR 714: Avoid treat normal hosts as unresponsive servers.
	  And fixup the lock code.
	- iana portlist update.

12 July 2022: George
	- For windows crosscompile, fix setting the IPV6_MTU socket option