@@ -1,3 +1,7 @@
+1 September 2022: Wouter
+	- Fix to update config tests to fix checking if nonblocking sockets
+	  work on OpenBSD.
+
 31 August 2022: Wouter
 	- Fix to avoid process wide fcntl calls mixed with nonblocking
 	  operations after a blocked write.
